<resources>
    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AC">AC</string>
    <string name="AddToMemory">M+</string>
    <string name="SubtractFromMemory">M-</string>
    <string name="RecallMemory">MR</string>
    <string name="plusminus">+/-</string>
    <string name="squared">x<![CDATA[<sup>2</sup>]]></string>
    <!--<string name="cubed">x<sup><small>3</small></sup></string>-->
    <!--<string name="etox">e<sup><small>x</small></sup></string>-->
    <!--<string name="tentox">10<sup><small>x</small></sup></string>-->
    <string name="oneoverx">1/x</string>
    <string name="squareroot">sqrt</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tangent">tan</string>
    <string name="pi">pi</string>
    <string name="naturallog">ln</string>
    <string name="random">rand</string>
    <string name="percent">%</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="mult">X</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dec">.</string>
    <string name="equal">=</string>
</resources>